--- a/search/src/main/resources/application.yml
+++ b/search/src/main/resources/application.yml
@@ -11,3 +11,5 @@ spring:
   cloud:
     nacos:
       server-addr: localhost:8848 # nacos地址
+#mybatis-plus:
+#  mapper-locations: classpath:/com/project/mapper/*.xml
