--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>search</module>
         <module>gateway</module>
+        <module>dbManage</module>
     </modules>
 
     <parent>
