--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>dbManage</module>
         <module>api</module>
         <module>dimensionAnalysis</module>
+        <module>chart</module>
     </modules>
 
     <parent>
